logs/Slang/generated/hdlconv/hdlconvertor_p495.sv.log
name: hdlconvertor_p495
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:1:1: error: expected member
checker observer_model(bit valid, reset);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:1:40: error: expected declarator
checker observer_model(bit valid, reset);
                                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:2:3: error: language feature not yet supported
  default clocking @($global_clock); endclocking
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:2:19: error: expected identifier
  default clocking @($global_clock); endclocking
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:3:3: error: expected member
  rand bit flag;
  ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:4:3: error: language feature not yet supported
  m1: assume property (reset |=> !flag);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:5:3: error: language feature not yet supported
  m2: assume property (!reset && flag |=> flag);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:6:3: error: language feature not yet supported
  m3: assume property ($rising_gclk(flag) |-> valid);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p495.sv:7:1: error: expected member
endchecker : observer_model
^~~~~~~~~~
